Fixed the workload/pod field and Fixed VolumeList page jumps to backup has no data error

--- a/src/routes/volume/VolumeList.less
+++ b/src/routes/volume/VolumeList.less
@@ -16,9 +16,9 @@
 .workloadContainer {
   margin-top: 10px;
   border-radius: 4px;
-  padding: 5px 7px 5px;
   position: relative;
   display: inline-block;
+  cursor: pointer;
   .pod {
     position: absolute;
     right: 0px;
